--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>edu.uri.csc305.curbalert</string>
+	<string>com.uricsc305.curbalert</string>
 	<key>PROJECT_ID</key>
 	<string>curb-alert-sqkv43</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:306021565398:ios:91f79bb1783d16e8d3da77</string>
+	<string>1:306021565398:ios:ecc8d4b2d3689860d3da77</string>
 </dict>
 </plist>
