--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,33 +27,34 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  audio_session: 0.1.21
   auto_size_text: 3.0.0
   cached_network_image: 3.4.1
   cached_network_image_platform_interface: 4.1.1
   cached_network_image_web: 1.3.1
-  cloud_firestore: 5.4.4
-  cloud_firestore_platform_interface: 6.4.3
-  cloud_firestore_web: 4.3.2
+  cloud_firestore: 5.5.0
+  cloud_firestore_platform_interface: 6.5.0
+  cloud_firestore_web: 4.3.4
   collection: 1.18.0
   csslib: 0.17.3
   dropdown_button2: 2.3.9
   easy_debounce: 2.0.1
   file_picker: 8.1.2
-  firebase_analytics: 11.3.3
-  firebase_analytics_platform_interface: 4.2.5
-  firebase_analytics_web: 0.5.10+2
-  firebase_auth: 5.3.1
-  firebase_auth_platform_interface: 7.4.7
-  firebase_auth_web: 5.13.2
-  firebase_core: 3.6.0
+  firebase_analytics: 11.3.5
+  firebase_analytics_platform_interface: 4.2.7
+  firebase_analytics_web: 0.5.10+4
+  firebase_auth: 5.3.3
+  firebase_auth_platform_interface: 7.4.9
+  firebase_auth_web: 5.13.4
+  firebase_core: 3.8.0
   firebase_core_platform_interface: 5.3.0
   firebase_core_web: 2.18.1
-  firebase_performance: 0.10.0+8
-  firebase_performance_platform_interface: 0.1.4+44
-  firebase_performance_web: 0.1.7+2
+  firebase_performance: 0.10.0+10
+  firebase_performance_platform_interface: 0.1.4+46
+  firebase_performance_web: 0.1.7+4
   firebase_storage: 12.3.2
-  firebase_storage_platform_interface: 5.1.31
-  firebase_storage_web: 3.10.2
+  firebase_storage_platform_interface: 5.1.33
+  firebase_storage_web: 3.10.5
   flutter_animate: 4.5.0
   flutter_cache_manager: 3.4.1
   flutter_google_places: 
@@ -70,6 +71,12 @@ dependencies:
   geolocator_windows: 0.2.3
   go_router: 12.1.3
   google_fonts: 6.1.0
+  google_maps: 8.0.0
+  google_maps_flutter: 2.9.0
+  google_maps_flutter_android: 2.14.7
+  google_maps_flutter_ios: 2.13.0
+  google_maps_flutter_platform_interface: 2.9.2
+  google_maps_flutter_web: 0.5.10
   google_sign_in: 6.2.1
   google_sign_in_android: 6.1.30
   google_sign_in_ios: 5.7.7
@@ -86,6 +93,9 @@ dependencies:
   image_picker_windows: 0.2.1+1
   intl: 0.19.0
   json_path: 0.7.2
+  just_audio: 0.9.40
+  just_audio_platform_interface: 4.3.0
+  just_audio_web: 0.4.12
   mime_type: 1.0.0
   package_info_plus: 8.0.2
   package_info_plus_platform_interface: 3.0.1
@@ -95,7 +105,7 @@ dependencies:
   path_provider_foundation: 2.4.0
   path_provider_linux: 2.2.1
   path_provider_platform_interface: 2.1.2
-  path_provider_windows: 2.2.1
+  path_provider_windows: 2.3.0
   plugin_platform_interface: 2.1.8
   provider: 6.1.2
   rxdart: 0.27.7
@@ -139,10 +149,25 @@ dependency_overrides:
   win32: 5.5.1
 
 dev_dependencies:
+  flutter_launcher_icons: 0.13.1
   flutter_lints: 4.0.0
+  image: 4.2.0
+  integration_test: 
+    sdk: flutter
   lints: 4.0.0
   flutter_test:
     sdk: flutter
+
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  web:
+    generate: true
+  image_path: 'assets/images/app_launcher_icon.png'
+  adaptive_icon_background: '#00000000'
+  adaptive_icon_foreground: 'assets/images/adaptive_foreground_icon.png'
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -165,6 +190,7 @@ flutter:
     - assets/pdfs/
     - assets/jsons/
 
+    - assets/environment_values/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
